--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Frontend Mentor | Sunnyside agency landing page</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/6bbebbe04f.js" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -138,13 +139,5 @@
     Coded by <a href="#">Faizat Hazeez</a>.
     </p>
   </div>
-
-  <script>
-    hambuger = document.querySelector(".hamburger");
-    hambuger.onclick = function() {
-      navList = document.querySelector(".nav-list");
-      navList.classList.toggle("active");
-    }
-  </script>
 </body>
 </html>
